--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "@enkryptcom/signer-ethereum",
+  "name": "@enkryptcom/types",
   "version": "0.0.1",
-  "description": "Ethereum blockchain signer",
+  "description": "typescript types for enkrypt packages",
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "test": "jest"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "engines": {
     "node": ">=14.15.0"
   },
-  "dependencies": {
-    "@enkryptcom/types": "^0.0.1",
-    "@enkryptcom/utils": "^0.0.1",
-    "ethereum-cryptography": "^1.0.0",
-    "ethereumjs-util": "^7.1.4"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^27.0.2",
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -29,9 +22,7 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jest": "^25.0.5",
     "eslint-plugin-module-resolver": "^1.4.0",
-    "jest": "^27.3.1",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.0.7",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3",
@@ -39,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/enkryptcom/enKrypt/tree/main/packages/signers/ethereum"
+    "url": "git+https://github.com/enkryptcom/enKrypt/tree/main/packages/types"
   },
   "keywords": [],
   "author": "kvhnuke",
