--- a/packages/signers/polkadot/package.json
+++ b/packages/signers/polkadot/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "test": "jest --no-cache"
+    "test": "ts-mocha -p tsconfig.json tests/**/*.spec.ts"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -14,12 +14,15 @@
   "dependencies": {
     "@enkryptcom/types": "^0.0.1",
     "@enkryptcom/utils": "^0.0.1",
-    "@polkadot/util-crypto": "^8.3.3"
+    "@polkadot/util-crypto": "^8.3.3",
+    "chai": "^4.3.6"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.16.11",
     "@polkadot/wasm-crypto": "^4.5.1",
-    "@types/jest": "^27.0.2",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "ts-mocha": "^9.0.2",
+    "mocha": "^9.2.0",
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -28,11 +31,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^25.0.5",
     "eslint-plugin-module-resolver": "^1.4.0",
-    "jest": "^27.5.1",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.0.7",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3",
@@ -40,7 +40,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/<FILL_IT>"
+    "url": "git+https://github.com/enkryptcom/enKrypt/tree/main/packages/signers/polkadot"
   },
   "keywords": [],
   "author": "kvhnuke",
