--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "test": "jest"
+    "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "dependencies": {
-    "web3-utils": "^1.7.0"
+    "web3-utils": "^1.7.0",
+    "chai": "^4.3.6"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "ts-mocha": "^9.0.2",
+    "mocha": "^9.2.0",
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -24,11 +28,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^25.0.5",
     "eslint-plugin-module-resolver": "^1.4.0",
-    "jest": "^27.3.1",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.0.7",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3",
