--- a/packages/signers/polkadot/package.json
+++ b/packages/signers/polkadot/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "test": "ts-mocha -p tsconfig.json tests/**/*.spec.ts"
+    "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -15,14 +15,12 @@
     "@enkryptcom/types": "^0.0.1",
     "@enkryptcom/utils": "^0.0.1",
     "@polkadot/util-crypto": "^8.3.3",
+    "@polkadot/wasm-crypto": "^4.5.1",
     "chai": "^4.3.6"
   },
   "devDependencies": {
-    "@polkadot/wasm-crypto": "^4.5.1",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
-    "ts-mocha": "^9.0.2",
-    "mocha": "^9.2.0",
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -32,7 +30,9 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-module-resolver": "^1.4.0",
+    "mocha": "^9.2.0",
     "prettier": "^2.5.1",
+    "ts-mocha": "^9.0.2",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3",
