--- a/packages/signers/ethereum/package.json
+++ b/packages/signers/ethereum/package.json
@@ -14,15 +14,16 @@
   "dependencies": {
     "@enkryptcom/types": "^0.0.1",
     "@enkryptcom/utils": "^0.0.1",
+    "bip39": "^3.0.4",
+    "chai": "^4.3.6",
     "ethereum-cryptography": "^1.0.0",
     "ethereumjs-util": "^7.1.4",
-    "chai": "^4.3.6"
+    "hdkey": "^2.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
+    "@types/hdkey": "^2.0.1",
     "@types/mocha": "^9.1.0",
-    "ts-mocha": "^9.0.2",
-    "mocha": "^9.2.0",
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -32,7 +33,9 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-module-resolver": "^1.4.0",
+    "mocha": "^9.2.0",
     "prettier": "^2.5.1",
+    "ts-mocha": "^9.0.2",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3",
