--- a/packages/types/.eslintrc.json
+++ b/packages/types/.eslintrc.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "no-console": "off",
     "no-plusplus": "off",
+    "no-shadow": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
