--- a/packages/utils/.eslintrc.json
+++ b/packages/utils/.eslintrc.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "no-console": "off",
     "no-plusplus": "off",
+    "import/no-cycle": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
