--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "test": "echo 'no-tests'"
   },
   "engines": {
     "node": ">=14.15.0"
