--- a/packages/signers/polkadot/tsconfig.json
+++ b/packages/signers/polkadot/tsconfig.json
@@ -7,11 +7,12 @@
     "noUnusedParameters": true,
     "removeComments": true,
     "sourceMap": true,
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "outDir": "dist",
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "declaration": true
   },
   "include": ["src/**/*.ts", "tests/**/*.ts"],
   "exclude": [
