--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -11,7 +11,8 @@
     "module": "commonjs",
     "outDir": "dist",
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "declaration": true
   },
   "include": ["src/**/*.ts", "tests/**/*.ts"],
   "exclude": [
