--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "watch:all": "nodemon --exec 'yarn run build:all'"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.1.0",
+    "@commitlint/config-conventional": "^16.0.0",
+    "devmoji": "^2.3.0",
+    "husky": "^7.0.4",
     "nodemon": "^2.0.15",
     "ultra-runner": "^3.10.5"
   }
