--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "private": true,
-  "workspaces": [
-    "packages/signers/*",
-    "packages/types",
-    "packages/utils",
-    "packages/keyring",
-    "packages/extension-bridge",
-    "packages/extension"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/signers/*",
+      "packages/types",
+      "packages/utils",
+      "packages/keyring",
+      "packages/extension-bridge",
+      "packages/extension"
+    ],
+    "nohoist": [
+      "**/@vue/cli-plugin-eslint",
+      "**/@vue/cli-plugin-eslint/**"
+    ]
+  },
   "scripts": {
     "test": "yarn workspaces run test",
     "build:all": "ultra -r build",
