--- a/packages/extension/.gitignore
+++ b/packages/extension/.gitignore
@@ -1,16 +1,23 @@
 .DS_Store
-.idea/
-.vite-ssg-dist
-.vite-ssg-temp
-*.crx
-*.local
-*.log
-*.pem
-*.xpi
-*.zip
-dist
-dist-ssr
-extension
 node_modules
-src/auto-imports.d.ts
-src/components.d.ts
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
