--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.1",
   "description": "utility functions for enkrypt extension",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsup src/index.ts --format esm,cjs --dts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts"
   },
@@ -16,13 +17,13 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
+    "@enkryptcom/types": "^0.0.1",
     "bip39": "^3.0.4",
     "chai": "^4.3.6",
-    "scrypt-js": "^3.0.1",
+    "ethereum-cryptography": "^1.0.0",
     "web3-utils": "^1.7.0"
   },
   "devDependencies": {
-    "@enkryptcom/types": "^0.0.1",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.17",
@@ -39,6 +40,7 @@
     "ts-mocha": "^9.0.2",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
+    "tsup": "^5.11.13",
     "typescript": "^4.5.5",
     "typescript-eslint": "0.0.1-alpha.0"
   },
