--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -12,4 +12,5 @@ jobs:
           node-version: "16"
           cache: "yarn"
       - run: yarn install
+      - run: yarn build:all
       - run: yarn test
