--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "echo 'no tests'"
   },
   "dependencies": {
     "@enkryptcom/keyring": "^0.0.1",
