--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
       "packages/utils",
       "packages/keyring",
       "packages/extension-bridge",
-      "packages/extension"
+      "packages/extension",
+      "packages/storage"
     ],
     "nohoist": [
       "**/@vue/cli-plugin-eslint",
