--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@enkryptcom/signer-ethereum": "^0.0.1",
     "@enkryptcom/signer-polkadot": "^0.0.1",
+    "@enkryptcom/storage": "^0.0.1",
     "@enkryptcom/types": "^0.0.1",
     "@enkryptcom/utils": "^0.0.1",
     "assert": "^2.0.0",
