--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@enkryptcom/types": "^0.0.1",
+    "@enkryptcom/utils": "^0.0.1",
     "chai": "^4.3.6"
   },
   "devDependencies": {
