--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -4,21 +4,27 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && npm run build:rollup",
     "lint": "vue-cli-service lint",
     "test": "echo 'no tests'",
+    "build:rollup": "rollup --config configs/rollup.config.contentscript.js && rollup --config configs/rollup.config.inject.js",
     "inspectWebpack": "vue-cli-service inspect > webpack.log"
   },
   "dependencies": {
+    "@enkryptcom/extension-bridge": "^0.0.1",
     "@enkryptcom/keyring": "^0.0.1",
     "@enkryptcom/storage": "^0.0.1",
     "core-js": "^3.21.0",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.6"
+    "vue-router": "^4.0.6",
+    "webext-bridge": "^5.0.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@open-wc/webpack-import-meta-loader": "^0.4.7",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vue/cli-plugin-babel": "~4.5.15",
@@ -32,6 +38,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
+    "rollup": "^2.68.0",
     "typescript": "~4.1.5",
     "webextension-polyfill": "^0.8.0"
   }
