--- a/packages/extension/.eslintrc.json
+++ b/packages/extension/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "root": true,
+  "env": {
+    "node": true
+  },
   "extends": [
     "@vue/prettier/@typescript-eslint",
     "plugin:vue/vue3-recommended",
