--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -15,8 +15,10 @@
     "@enkryptcom/extension-bridge": "^0.0.1",
     "@enkryptcom/keyring": "^0.0.1",
     "@enkryptcom/storage": "^0.0.1",
+    "assert": "^2.0.0",
     "core-js": "^3.21.0",
     "crx-hotreload": "^1.0.6",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "vue": "^3.2.31",
     "vue-router": "^4.0.6",
     "webext-bridge": "^5.0.3"
@@ -27,6 +29,7 @@
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
+    "@types/assert": "^1.5.6",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vue/cli-plugin-babel": "~4.5.15",
@@ -41,6 +44,8 @@
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
     "rollup": "^2.68.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "typescript": "~4.1.5",
     "webextension-polyfill": "^0.8.0"
   }
