--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -44,8 +44,8 @@
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
     "rollup": "^2.68.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-uglify": "^6.0.4",
     "typescript": "~4.1.5",
     "webextension-polyfill": "^0.8.0"
   }
