--- a/packages/extension-bridge/.eslintrc.json
+++ b/packages/extension-bridge/.eslintrc.json
@@ -12,6 +12,8 @@
   "globals": {},
   "rules": {
     "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "import/no-extraneous-dependencies": "off",
     "no-multi-assign": "off",
     "no-param-reassign": "off",
     "no-underscore-dangle": "off",
