--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -15,7 +15,8 @@
     "@enkryptcom/extension-bridge": "^0.0.1",
     "@enkryptcom/keyring": "^0.0.1",
     "@enkryptcom/storage": "^0.0.1",
-    "assert": "^2.0.0",
+    "@types/events": "^3.0.0",
+    "chai": "^4.3.6",
     "core-js": "^3.21.0",
     "crx-hotreload": "^1.0.6",
     "rollup-plugin-node-builtins": "^2.1.2",
@@ -29,7 +30,6 @@
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
-    "@types/assert": "^1.5.6",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vue/cli-plugin-babel": "~4.5.15",
@@ -42,8 +42,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "events": "^3.3.0",
     "prettier": "^2.2.1",
     "rollup": "^2.68.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-uglify": "^6.0.4",
     "typescript": "~4.1.5",
