--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "esnext",
+    "module": "commonjs",
     "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
@@ -10,7 +10,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "types": ["webpack-env"],
+    "types": ["mocha", "webpack-env"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
