--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build --no-clean && npm run build:rollup",
     "build:prod": "vue-cli-service build && npm run build:rollup",
     "lint": "vue-cli-service lint --fix",
-    "test": "ts-mocha --paths -p configs/tsconfig.test.json ./**/*.test.ts",
+    "test": "ts-mocha --paths -p configs/tsconfig.test.json ./**/*.mocha.ts",
     "build:rollup": "rollup --config configs/rollup.config.contentscript.js && rollup --config configs/rollup.config.inject.js",
     "inspectWebpack": "vue-cli-service inspect > webpack.log"
   },
