--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
       "packages/keyring",
       "packages/extension-bridge",
       "packages/extension",
-      "packages/storage"
+      "packages/storage",
+      "packages/request"
     ],
     "nohoist": [
       "**/@vue/cli-plugin-eslint",
@@ -19,7 +20,7 @@
     "test": "yarn workspaces run test",
     "lint": "yarn workspaces run lint",
     "build:all": "ultra -r build",
-    "watch:all": "nodemon --exec 'yarn run build:all && node scripts/compile-done.js'"
+    "watch": "nodemon --exec 'yarn run build:all && node scripts/compile-done.js'"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
