--- a/packages/request/.eslintrc.json
+++ b/packages/request/.eslintrc.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "import/no-extraneous-dependencies": "off",
+    "no-await-in-loop": "off",
     "max-classes-per-file": "off",
     "no-multi-assign": "off",
     "class-methods-use-this": "off",
