--- a/packages/request/package.json
+++ b/packages/request/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
+    "@types/events": "^3.0.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
