--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -20,6 +20,7 @@
     "chai": "^4.3.6",
     "core-js": "^3.21.0",
     "crx-hotreload": "^1.0.6",
+    "eventemitter3": "^4.0.7",
     "rollup-plugin-node-builtins": "^2.1.2",
     "vue": "^3.2.31",
     "vue-router": "^4.0.6",
@@ -44,7 +45,6 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "events": "^3.3.0",
     "mocha": "^9.2.0",
     "prettier": "^2.2.1",
     "rollup": "^2.68.0",
