--- a/packages/request/package.json
+++ b/packages/request/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@enkryptcom/types": "^0.0.1",
+    "eventemitter3": "^4.0.7",
     "isomorphic-ws": "^4.0.1",
     "json-rpc-2.0": "^1.1.0",
     "node-fetch": "2",
@@ -26,7 +27,6 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
-    "@types/events": "^3.0.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
