--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -29,6 +29,10 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@open-wc/webpack-import-meta-loader": "^0.4.7",
+    "@polkadot/api": "^7.10.1",
+    "@polkadot/extension-inject": "^0.42.7",
+    "@polkadot/rpc-provider": "^7.10.1",
+    "@polkadot/types": "^7.10.1",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
