--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --no-clean && npm run build:rollup",
+    "build:vue": "vue-cli-service build --no-clean",
+    "build": "npm run build:rollup",
     "build:prod": "vue-cli-service build && npm run build:rollup",
     "lint": "vue-cli-service lint --fix",
     "test": "ts-mocha --paths -p configs/tsconfig.test.json ./**/*.mocha.ts",
