--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build:vue": "vue-cli-service build --no-clean",
-    "build": "npm run build:rollup",
+    "build": "npm run build:vue && npm run build:rollup",
     "build:prod": "vue-cli-service build && npm run build:rollup",
     "lint": "vue-cli-service lint --fix",
     "test": "ts-mocha --paths -p configs/tsconfig.test.json ./**/*.mocha.ts",
