devop: 🔧 url parse

--- a/packages/extension/src/manifest/manifest-chrome.json
+++ b/packages/extension/src/manifest/manifest-chrome.json
@@ -20,7 +20,8 @@
     "unlimitedStorage",
     "clipboardWrite",
     "activeTab",
-    "notifications"
+    "notifications",
+    "tabs"
   ],
   "background": {
     "scripts": ["scripts/background.js", "dev/hot-reload.js"],
