--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -23,9 +23,9 @@
     "crx-hotreload": "^1.0.6",
     "eventemitter3": "^4.0.7",
     "rollup-plugin-node-builtins": "^2.1.2",
+    "url-parse": "^1.5.10",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.6",
-    "webext-bridge": "^5.0.3"
+    "vue-router": "^4.0.6"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
@@ -38,6 +38,7 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/mocha": "^9.1.0",
+    "@types/url-parse": "^1.4.8",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vue/cli-plugin-babel": "~4.5.15",
