--- a/packages/signers/polkadot/package.json
+++ b/packages/signers/polkadot/package.json
@@ -8,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsup src/index.ts --format esm,cjs --dts --clean",
     "lint": "prettier --write .",
     "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts"
   },
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@enkryptcom/utils": "^0.0.1",
-    "@polkadot/util-crypto": "^8.3.3",
+    "@polkadot/util-crypto": "^8.4.1",
     "@polkadot/wasm-crypto": "^4.5.1",
     "assert": "^2.0.0",
     "chai": "^4.3.6"
@@ -41,7 +41,8 @@
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5",
-    "typescript-eslint": "0.0.1-alpha.0"
+    "typescript-eslint": "0.0.1-alpha.0",
+    "tsup": "^5.11.13"
   },
   "repository": {
     "type": "git",
