--- a/packages/storage/tsconfig.json
+++ b/packages/storage/tsconfig.json
@@ -6,6 +6,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": true,
+    "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "target": "es5",
     "module": "commonjs",
