--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -21,6 +21,7 @@
     "@enkryptcom/storage": "^0.0.1",
     "@enkryptcom/types": "^0.0.1",
     "@enkryptcom/utils": "^0.0.1",
+    "@polkadot/util": "^8.4.1",
     "assert": "^2.0.0",
     "bip39": "^3.0.4"
   },
@@ -42,9 +43,9 @@
     "ts-mocha": "^9.0.2",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
+    "tsup": "^5.11.13",
     "typescript": "^4.5.5",
-    "typescript-eslint": "0.0.1-alpha.0",
-    "tsup": "^5.11.13"
+    "typescript-eslint": "0.0.1-alpha.0"
   },
   "repository": {
     "type": "git",
