--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -18,6 +18,7 @@
     "@enkryptcom/request": "^0.0.1",
     "@enkryptcom/storage": "^0.0.1",
     "@enkryptcom/utils": "^0.0.1",
+    "@polkadot/types": "^7.10.1",
     "@polkadot/util": "^8.4.1",
     "@types/events": "^3.0.0",
     "chai": "^4.3.6",
