--- a/packages/keyring/tsconfig.json
+++ b/packages/keyring/tsconfig.json
@@ -6,8 +6,8 @@
     "noUnusedParameters": true,
     "removeComments": true,
     "sourceMap": true,
-    "target": "es5",
-    "module": "commonjs",
+    "target": "esnext",
+    "module": "esnext",
     "outDir": "dist",
     "resolveJsonModule": true,
     "esModuleInterop": true,
