devop: 🔧 redo error handling

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service build --watch",
+    "watch-vue": "vue-cli-service build --watch --no-clean",
+    "watch-ic": "nodemon --exec 'npm run build:rollup'",
+    "watch": "concurrently 'npm:watch-*'",
     "build:vue": "vue-cli-service build --no-clean",
     "build": "npm run build:vue && npm run build:rollup",
     "build:prod": "vue-cli-service build && npm run build:rollup",
@@ -22,9 +24,11 @@
     "@polkadot/util": "^8.4.1",
     "@types/events": "^3.0.0",
     "chai": "^4.3.6",
+    "concurrently": "^7.0.0",
     "core-js": "^3.21.0",
     "crx-hotreload": "^1.0.6",
     "eventemitter3": "^4.0.7",
+    "nodemon": "^2.0.15",
     "rollup-plugin-node-builtins": "^2.1.2",
     "url-parse": "^1.5.10",
     "vue": "^3.2.31",
