--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^7.0.0",
     "core-js": "^3.21.0",
     "crx-hotreload": "^1.0.6",
+    "ethereumjs-util": "^7.1.4",
     "eventemitter3": "^4.0.7",
     "rollup-plugin-node-builtins": "^2.1.2",
     "url-parse": "^1.5.10",
