--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -30,10 +30,13 @@
     "crx-hotreload": "^1.0.6",
     "ethereumjs-util": "^7.1.4",
     "eventemitter3": "^4.0.7",
+    "moment": "^2.29.1",
     "rollup-plugin-node-builtins": "^2.1.2",
     "url-parse": "^1.5.10",
     "vue": "^3.2.31",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vue3-lottie": "^2.1.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
@@ -59,6 +62,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "less": "^4.1.2",
+    "less-loader": "^5.0.0",
     "mocha": "^9.2.0",
     "prettier": "^2.2.1",
     "rollup": "^2.68.0",
