devop: 🔧 set @popup alias

--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -14,7 +14,8 @@
     "types": ["mocha", "webpack-env"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@popup/*": ["./src/ui/popup/*"]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
