--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -15,7 +15,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@popup/*": ["./src/ui/popup/*"]
+      "@popup/*": ["./src/ui/action/*"]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
