--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -23,11 +23,11 @@
     "@enkryptcom/utils": "^0.0.1",
     "@polkadot/types": "^7.10.1",
     "@polkadot/util": "^8.4.1",
+    "@types/chrome": "^0.0.180",
     "@types/events": "^3.0.0",
     "chai": "^4.3.6",
     "concurrently": "^7.0.0",
     "core-js": "^3.21.0",
-    "crx-hotreload": "^1.0.6",
     "ethereumjs-util": "^7.1.4",
     "eventemitter3": "^4.0.7",
     "moment": "^2.29.1",
