--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -11,7 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "sourceMap": true,
-    "types": ["mocha", "webpack-env"],
+    "types": ["mocha", "webpack-env", "chrome"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
