devop: 🔧 migration work

--- a/packages/signers/polkadot/.eslintrc.json
+++ b/packages/signers/polkadot/.eslintrc.json
@@ -18,6 +18,7 @@
     "no-underscore-dangle": "off",
     "no-continue": "off",
     "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "no-console": "off",
     "no-plusplus": "off",
     "class-methods-use-this": "off",
