--- a/packages/extension/src/manifest/manifest-chrome.json
+++ b/packages/extension/src/manifest/manifest-chrome.json
@@ -21,8 +21,7 @@
     "clipboardWrite",
     "activeTab",
     "notifications",
-    "tabs",
-    "scripting"
+    "tabs"
   ],
   "background": {
     "service_worker": "scripts/background.js"
