--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,12 @@ dist
 # TernJS port file
 .tern-port
 *.ultra.cache.json
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
