--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -15,7 +15,6 @@
   "engines": {
     "node": ">=14.15.0"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/node": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
@@ -29,9 +28,9 @@
     "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
+    "tsup": "^5.11.13",
     "typescript": "^4.5.5",
-    "typescript-eslint": "0.0.1-alpha.0",
-    "tsup": "^5.11.13"
+    "typescript-eslint": "0.0.1-alpha.0"
   },
   "repository": {
     "type": "git",
