--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -3,18 +3,15 @@
   "version": "0.3.1",
   "private": true,
   "scripts": {
-    "watch-vue": "vue-cli-service build --watch --no-clean",
-    "watch-inject": "rollup --watch --config configs/rollup.config.inject.js",
-    "watch-contentscript": "rollup --watch --config configs/rollup.config.contentscript.js",
-    "watch": "concurrently 'npm:watch-*'",
     "build": "vue-cli-service build && npm run build:rollup",
     "lint": "vue-cli-service lint --fix",
-    "test": "ts-mocha --paths -p configs/tsconfig.test.json ./**/*.mocha.ts",
     "build:rollup": "cross-env minify=on rollup --config configs/rollup.config.contentscript.js && cross-env minify=on rollup --config configs/rollup.config.inject.js",
-    "inspectWebpack": "vue-cli-service inspect > webpack.log"
-  },
-  "installConfig": {
-    "hoistingLimits": "workspaces"
+    "inspectWebpack": "vue-cli-service inspect > webpack.log",
+    "test": "ts-mocha --paths -p configs/tsconfig.test.json ./**/*.mocha.ts",
+    "watch": "concurrently 'npm:watch-*'",
+    "watch-contentscript": "rollup --watch --config configs/rollup.config.contentscript.js",
+    "watch-inject": "rollup --watch --config configs/rollup.config.inject.js",
+    "watch-vue": "vue-cli-service build --watch --no-clean"
   },
   "dependencies": {
     "@enkryptcom/extension-bridge": "^0.0.1",
@@ -50,22 +47,26 @@
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/mocha": "^9.1.0",
     "@types/url-parse": "^1.4.8",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.15",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@vue/cli-plugin-babel": "~5.0.4",
+    "@vue/cli-plugin-eslint": "~5.0.4",
+    "@vue/cli-plugin-typescript": "~5.0.4",
+    "@vue/cli-service": "~5.0.4",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/eslint-config-typescript": "^9.1.0",
+    "babel-code-frame": "^6.26.0",
     "cross-env": "^7.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
     "mocha": "^9.2.0",
-    "prettier": "^2.2.1",
+    "node-ipc": "^11.1.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "prettier": "^2.4.1",
     "rollup": "^2.68.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
@@ -73,11 +74,28 @@
     "rollup-plugin-uglify": "^6.0.4",
     "ts-mocha": "^9.0.2",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "~4.1.5",
-    "webextension-polyfill": "^0.8.0"
+    "typescript": "^4.5.5",
+    "webextension-polyfill": "^0.8.0",
+    "worker-rpc": "^0.2.0"
   },
   "browserslist": [
-    "> 1%",
-    "not dead"
-  ]
+    "last 2 versions",
+    "not dead",
+    "not safari > 0",
+    "not ios_saf > 0",
+    "not baidu > 0",
+    "not ie > 0",
+    "not op_mini all",
+    "not samsung > 0",
+    "not op_mob > 0",
+    "not android > 0",
+    "not kaios > 0",
+    "not and_chr > 0",
+    "not and_ff > 0",
+    "not and_qq > 0",
+    "not and_uc > 0"
+  ],
+  "installConfig": {
+    "hoistingLimits": "workspaces"
+  }
 }
