--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -21,7 +21,6 @@
     "@enkryptcom/storage": "^0.0.1",
     "@enkryptcom/types": "^0.0.1",
     "@enkryptcom/utils": "^0.0.1",
-    "@polkadot/types": "^7.10.1",
     "@polkadot/util": "^8.4.1",
     "@polkadot/wasm-crypto": "^5.0.1",
     "@types/chrome": "^0.0.180",
@@ -40,11 +39,6 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@polkadot/api": "^7.10.1",
-    "@polkadot/extension-inject": "^0.42.7",
-    "@polkadot/rpc-provider": "^7.10.1",
-    "@polkadot/types": "^7.10.1",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
@@ -58,8 +52,9 @@
     "@vue/cli-service": "~5.0.4",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "babel-code-frame": "^6.26.0",
+    "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -67,19 +62,17 @@
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
     "mocha": "^9.2.0",
-    "node-ipc": "^11.1.0",
-    "node-polyfill-webpack-plugin": "^1.1.4",
     "prettier": "^2.4.1",
     "rollup": "^2.68.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-uglify": "^6.0.4",
+    "stream-browserify": "^3.0.0",
     "ts-mocha": "^9.0.2",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5",
-    "webextension-polyfill": "^0.8.0",
-    "worker-rpc": "^0.2.0"
+    "webextension-polyfill": "^0.8.0"
   },
   "installConfig": {
     "hoistingLimits": "none"
