--- a/packages/signers/polkadot/package.json
+++ b/packages/signers/polkadot/package.json
@@ -2,7 +2,8 @@
   "name": "@enkryptcom/signer-polkadot",
   "version": "0.0.1",
   "description": "Polkadot blockchain signers",
-  "main": "dist/index.mjs",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
