--- a/packages/extension/.eslintrc.json
+++ b/packages/extension/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "root": true,
   "env": {
-    "node": true
+    "node": true,
+    "vue/setup-compiler-macros": true
   },
   "extends": [
     "@vue/prettier/@typescript-eslint",
