devop: 🔧 fix network gradient changes

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -24,6 +24,7 @@
     "@polkadot/wasm-crypto": "^6.0.1",
     "@types/chrome": "^0.0.180",
     "@types/events": "^3.0.0",
+    "@types/less": "^3.0.3",
     "chai": "^4.3.6",
     "concurrently": "^7.0.0",
     "core-js": "^3.21.0",
@@ -61,7 +62,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "less": "^4.1.2",
     "less-loader": "^5.0.0",
     "mocha": "^9.2.0",
     "prettier": "^2.4.1",
