chore: install bip39 and uninstall mew keystore package

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -20,13 +20,13 @@
     "@enkryptcom/storage": "^0.0.1",
     "@enkryptcom/types": "^0.0.1",
     "@enkryptcom/utils": "^0.0.1",
-    "@myetherwallet/eth2-keystore": "^0.2.3",
     "@polkadot/util": "^9.0.1",
     "@polkadot/wasm-crypto": "^6.0.1",
     "@types/chrome": "^0.0.180",
     "@types/events": "^3.0.0",
     "@types/less": "^3.0.3",
     "bignumber.js": "^9.0.2",
+    "bip39": "^3.0.4",
     "chai": "^4.3.6",
     "concurrently": "^7.0.0",
     "core-js": "^3.21.0",
