devop: 🔧 better keyring lock check for new window

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -44,6 +44,7 @@
     "lodash": "^4.17.21",
     "memoize-one": "^6.0.0",
     "moment": "^2.29.1",
+    "nanoevents": "^6.0.2",
     "qrcode.vue": "^3.3.3",
     "rollup-plugin-node-builtins": "^2.1.2",
     "url-parse": "^1.5.10",
